изменены стили межстрочного интверала в двух файлах

--- a/assets/css/edits.css
+++ b/assets/css/edits.css
@@ -68,7 +68,7 @@ body {
 }
 
 .multi__gift-descr, .popular__gift-descr {
-    line-height: normal;
+    line-height: 2;
 }
 .popular__gift-descr {
     margin: 8px 0 12px;
